agrego mi seccion en boostrap

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                       <div class="contenido-ver-todos">
                           <h3>Ver Todos los Productos</h3>
                           <p>Descubre nuestra colección completa de pastas frescas.</p>
-                          <a href="productos.html" class="boton-ver-todos">Explorar Catálogo</a>
+                          <a href="promos.html" class="boton-ver-todos">Explorar Catálogo</a>
                       </div>
                   </div>
                 </div>
