--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -26,10 +26,120 @@
         </main>
 
         <!-- Productos de Joni -->
-        <div class="row mx-0 productos">
-            <h2>Contenido Joni</h2>
-        </div>
 
+        <div class="container-fluid mt-5">
+            <h3 class="mb-4">Productos Destacados</h3>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 mb-4 tarjeta">
+                    <div class="card h-100">
+                        <img src="img/productos/fideos.jpg" class="card-img-top" alt="Fideos">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Fideos</h5>
+                            <p class="card-text">1/2 kg. - 3 Porciones.</p>
+                            <h2><b>$ 1300</b></h2>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <button class="btn btn-primary btn-block">Agregar al carrito</button>
+                                <input type="number" min="1" value="1" class="form-control w-25">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 tarjeta">
+                    <div class="card h-100">
+                        <img src="img/productos/noquis.jpg" class="card-img-top" alt="Ñoquis">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Ñoquis</h5>
+                            <p class="card-text">1/2 kg. - 3 Porciones.</p>
+                            <h2><b>$ 1300</b></h2>
+                        <div class="d-flex justify-content-between align-items-center">
+                                <button class="btn btn-primary btn-block">Agregar al carrito</button>
+                                <input type="number" min="1" value="1" class="form-control w-25">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 tarjeta">
+                    <div class="card h-100">
+                        <img src="img/productos/ravioles.jpg" class="card-img-top" alt="Ravioles">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Ravioles</h5>
+                            <p class="card-text">1/2 kg. - 3 Porciones.</p>
+                            <h2><b>$ 1300</b></h2>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <button class="btn btn-primary btn-block">Agregar al carrito</button>
+                                <input type="number" min="1" value="1" class="form-control w-25">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-stretch ver-todos">
+                    <div class="card h-100 bg-light text-center ver-todos-2">
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center ver-todos-3">
+                            <h5 class="card-title">Ver Todos los Productos</h5>
+                            <p class="card-text">Descubre nuestra colección completa de pastas frescas.</p>
+                            <a href="productos.html" class="btn btn-secondary btn-block">Explorar Catálogo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid mt-5">
+            <h3 class="mb-4">Combos</h3>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 mb-4 tarjeta-promos">
+                    <div class="card h-100">
+                        <img src="img/productos/fideo_salsa.jpg" class="card-img-top" alt="Fideos">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Fideos + Salsa a eleccion</h5>
+                            <p class="card-text">1/2 kg. - 3 Porciones.</p>
+                            <p class="card-text">Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
+                            <h2><b>$ 1300</b></h2>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <button class="btn btn-primary btn-block">Agregar al carrito</button>
+                                <input type="number" min="1" value="1" class="form-control w-25">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 tarjeta-promos">
+                    <div class="card h-100">
+                        <img src="img/productos/noquis_salsa.jpg" class="card-img-top" alt="Ñoquis">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Ñoquis + Salsa a eleccion</h5>
+                            <p class="card-text">1/2 kg. - 3 Porciones.</p>
+                            <p class="card-text">Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
+                            <h2><b>$ 1300</b></h2>
+                        <div class="d-flex justify-content-between align-items-center">
+                                <button class="btn btn-primary btn-block">Agregar al carrito</button>
+                                <input type="number" min="1" value="1" class="form-control w-25">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 tarjeta-promos">
+                    <div class="card h-100">
+                        <img src="img/productos/ravioles_salsa.jpg" class="card-img-top" alt="Ravioles">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Ravioles + Salsa a eleccion</h5>
+                            <p class="card-text">1/2 kg. - 3 Porciones.</p>
+                            <p class="card-text">Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
+                            <h2><b>$ 1300</b></h2>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <button class="btn btn-primary btn-block">Agregar al carrito</button>
+                                <input type="number" min="1" value="1" class="form-control w-25">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-stretch ver-todos-promos">
+                    <div class="card h-100 bg-light text-center ver-todos-2">
+                        <div class="card-body d-flex flex-column justify-content-center align-items-center ver-todos-3">
+                            <h5 class="card-title">Ver Todos los Productos</h5>
+                            <p class="card-text">Descubre nuestra colección completa de pastas frescas.</p>
+                            <a href="promos.html" class="btn btn-secondary btn-block">Explorar Catálogo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Nosotros Rodo -->
         <div class="row mx-0 nosotros">
             <h2>Contenido Rodo</h2>
