cambios en nosotros , y actualizacion de footers

--- a/nosotros.html
+++ b/nosotros.html
@@ -64,10 +64,9 @@
                 <div class="carousel-icons">
                     <div data-card="1">¿Quienes Somos?</div>
                     <div data-card="2">Nuestra Historia</div>
-                    <div data-card="3">La Fabrica</div>
+                    <div data-card="3">La Fábrica</div>
                     <div data-card="4">Nuestro Equipo</div>
-                    <div data-card="5">Nuestra Filosofia</div>
-                    <div data-card="6">Nuestros Valores</div>
+                    <div data-card="5">Nuestra Filosofía y Valores</div>
                 </div>
                 <div class="card active" id="card-1">
                     <h2>¿Quienes Somos?</h2>
@@ -81,7 +80,7 @@
                     </div>
                 </div>
                 <div class="card" id="card-3">
-                    <h2>La Fabrica</h2>
+                    <h2>La Fábrica</h2>
                     <p>Nuestra fábrica está equipada con tecnología moderna que nos permite mantener la autenticidad y calidad artesanal de nuestros productos.Nuestra planta de producción combina innovación y tradición, garantizando que cada pieza de pasta se elabore con el mismo cuidado y dedicación que en nuestros inicios.</p>
                     <div class="card-pic">  
                         <img src="img/nosotros6.jpg" alt="Imagen 1">
@@ -95,18 +94,8 @@
                     </div>
                 </div>
                 <div class="card" id="card-5">
-                    <h2>Nuestra Filosofia</h2>
+                    <h2>Nuestra Filosofía</h2>
                     <p>Nuestra filosofía se basa en la creencia de que la calidad y la autenticidad son esenciales para crear productos excepcionales. Nos esforzamos por mantener vivas las tradiciones culinarias italianas mientras innovamos constantemente para mejorar nuestros procesos y ofrecer lo mejor a nuestros clientes. Creemos en la importancia de utilizar ingredientes frescos y naturales, y en el valor de trabajar con pasión y dedicación. Cada día, buscamos superar las expectativas de nuestros clientes, brindándoles no solo un producto, sino una experiencia gastronómica que celebre la riqueza y diversidad de la cocina italiana.</p>
-                    <h4>Misión</h4>
-                    <p>Brindar a las personas en todo el mundo la oportunidad de disfrutar de pastas de calidad, ricas y saludables, transformando así sus vínculos cotidianos en momentos mágicos de encuentro y celebración.</p>
-                        
-                    <h4>Visión</h4>
-                    <p>Ser una empresa líder y reconocida en el mercado, destacándonos por nuestras prácticas sustentables y por nuestra capacidad de ingresar en nuevos negocios.</p>
-                        
-                    <h4>Propósito</h4>
-                    <p>Hacemos accesibles las tendencias en alimentación para que todas las personas podamos vivir mejor.</p>
-                </div>
-                <div class="card" id="card-6">
                     <h2>Nuestros Valores</h2>
                     <div class="nuestros_valores vibrate">
                         <div class="word" id="integridad">Integridad</div>
@@ -116,7 +105,7 @@
                         <div class="word" id="resultados">Resultados</div>
                         <div class="word" id="compromiso">Compromiso</div>
                         <div class="word" id="innovacion">Innovación</div>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -129,7 +118,16 @@
                 </div>
                 <div class="footer-section">
                     <h3>Pastas Artesanales</h3>
-                    <p>Calidad y prestigio desde 1943...<br>Gracias por su visita</p>
+                    <p>Calidad y prestigio desde 1943.<br>Gracias por su visita</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Redes Sociales</h3>
+                    <p>
+                        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i><a>
+                        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+                    </p>
                 </div>
                 <div class="footer-section">
                     <h3>Visítanos</h3>
