index para boobstrap

--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/nico.css">
     <link rel="stylesheet" href="css/jona.css">
     <link rel="stylesheet" href="css/victorio.css">
+
 </head>
 <body>
     <div class="container-fluid px-0">
@@ -22,7 +23,15 @@
 
         <!-- Principal Nico -->
         <main class="row mx-0 main">
-            <h2>Contenido Nico</h2>
+            <div class="container-fluid px-0">
+                <div class="image-overlay">
+                  <img src="img/principal.jpg" alt="Imagen de ejemplo">
+                  <div class="overlay-text">
+                    <h1>El Rincón del Sorrentino</h1>
+                    <h3>PASTAS ARTESANALES</h3>
+                  </div>
+                </div>
+              </div>
         </main>
 
         <!-- Productos de Joni -->
