cambios de colores, animacion y retoques en contacto

--- a/nosotros.html
+++ b/nosotros.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="contenedora">
-        <!-- Navbar -->
+        <!-- navbar de octavio -->
         <header class="row navbar">
             <div class="column column-60">
                 <nav class="navbar">
@@ -51,7 +51,6 @@
                 </nav>
             </div>
         </header>
-
         <main class="row principal">
             <section class="overlay">
                 <h1>El Rincón del Sorrentino</h1>
