cambios de colores, animacion y retoques en contacto

--- a/carrito/index.html
+++ b/carrito/index.html
@@ -46,7 +46,7 @@
     <div id="carrito"></div>
     <button id="btnComprar" onclick="realizarCompra()">Realizar Compra</button>
 
-    <script src="js/script.js"></script>
+    <script src="js/carroscript.js"></script>
 </body>
 
 </html>
