todo lo de rodo

--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/nico.css">
     <link rel="stylesheet" href="css/jona.css">
     <link rel="stylesheet" href="css/victorio.css">
-
 </head>
 <body>
     <div class="container-fluid px-0">
@@ -25,13 +24,13 @@
         <main class="row mx-0 main">
             <div class="container-fluid px-0">
                 <div class="image-overlay">
-                  <img src="img/principal.jpg" alt="Imagen de ejemplo">
-                  <div class="overlay-text">
-                    <h1>El Rincón del Sorrentino</h1>
-                    <h3>PASTAS ARTESANALES</h3>
-                  </div>
+                    <img src="img/principal.jpg" alt="Imagen de ejemplo">
+                    <div class="overlay-text">
+                        <h1>El Rincón del Sorrentino</h1>
+                        <h3>PASTAS ARTESANALES</h3>
+                    </div>
                 </div>
-              </div>
+            </div>
         </main>
 
         <!-- Productos de Joni -->
@@ -60,7 +59,7 @@
                             <h5 class="card-title">Ñoquis</h5>
                             <p class="card-text">1/2 kg. - 3 Porciones.</p>
                             <h2><b>$ 1300</b></h2>
-                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="d-flex justify-content-between align-items-center">
                                 <button class="btn btn-primary btn-block">Agregar al carrito</button>
                                 <input type="number" min="1" value="1" class="form-control w-25">
                             </div>
@@ -87,6 +86,7 @@
                             <h5 class="card-title">Ver Todos los Productos</h5>
                             <p class="card-text">Descubre nuestra colección completa de pastas frescas.</p>
                             <a href="productos.html" class="btn btn-secondary btn-block">Explorar Catálogo</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                             <p class="card-text">1/2 kg. - 3 Porciones.</p>
                             <p class="card-text">Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
                             <h2><b>$ 1300</b></h2>
-                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="d-flex justify-content-between align-items-center">
                                 <button class="btn btn-primary btn-block">Agregar al carrito</button>
                                 <input type="number" min="1" value="1" class="form-control w-25">
                             </div>
@@ -145,71 +145,64 @@
                             <h5 class="card-title">Ver Todos los Productos</h5>
                             <p class="card-text">Descubre nuestra colección completa de pastas frescas.</p>
                             <a href="promos.html" class="btn btn-secondary btn-block">Explorar Catálogo</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
         <!-- Nosotros Rodo -->
-        <div class="row nosotros">
-            <div class="carousel">
+        <div class="row nosotros mb-4">
+            <div id="carouselExampleSlidesOnly" class="carousel slide col-5" data-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <img src="img/nosotros7.jpg" alt="Imagen 1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/nosotros3.jpg" alt="Imagen 3">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/nosotros4.jpg" alt="Imagen 3">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/nosotros5.jpg" alt="Imagen 3">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/nosotros6.jpg" alt="Imagen 3">
-                    </div>
+                  <div class="carousel-item active" data-interval="2000">
+                    <img src="img/nosotros7.jpg" class="d-block w-100" alt="Imagen 1">
+                  </div>
+                  <div class="carousel-item" data-interval="2000">
+                    <img src="img/nosotros9.jpg" class="d-block w-100" alt="Imagen 2">
+                  </div>
+                  <div class="carousel-item" data-interval="2000">
+                    <img src="img/nosotros5.jpg" class="d-block w-100" alt="Imagen 3">
+                  </div>
+                  <div class="carousel-item" data-interval="2000">
+                    <img src="img/nosotros4.jpg" class="d-block w-100" alt="Imagen 4">
+                  </div>
+                  <div class="carousel-item" data-interval="2000">
+                    <img src="img/nosotros6.jpg" class="d-block w-100" alt="Imagen 5">
+                  </div>
                 </div>
-                <div class="carousel-controls">
-                    <button class="prev">&#10094;</button>
-                    <button class="next">&#10095;</button>
-                </div>
-                            
             </div>
-            <div class="nosotros-texto">
-                <h2><strong>Sobre Nosotros</strong></h2>
+            <div class="nosotros-texto mb4 col-7">
+                <h2>Sobre Nosotros</h2>
                 <h5>
-                    Bienvenidos El Rincón del Sorrentino, una empresa familiar con más de 50 años de tradición en la elaboración de las mejores pastas artesanales. Fundada en 1970 por Giovanni Rossi, un apasionado chef italiano, nuestra fábrica comenzó como un pequeño taller en el corazón de la ciudad, con el sueño de traer los auténticos sabores de Italia a nuestras mesas locales.
+                    El Rincón del Sorrentino, una empresa familiar con más de 50 años de tradición en la elaboración de las mejores pastas artesanales. Fundada en 1970 por Giovanni Rossi, un apasionado chef italiano, nuestra fábrica comenzó como un pequeño taller en el corazón de la ciudad, con el sueño de traer los auténticos sabores de Italia a nuestras mesas locales.
                     A lo largo de las décadas, hemos crecido y evolucionado, pero nuestra esencia permanece intacta: mantener la calidad y la autenticidad en cada uno de nuestros productos. Utilizamos recetas tradicionales, ingredientes seleccionados y procesos artesanales que han pasado de generación en generación, asegurando que cada bocado de nuestras pastas sea una experiencia única y deliciosa.
                 </h5>
-                <button class="boton-conocemas" onclick="location.href='/nosotros.html';">
-                    <span class="icono">Conocé Más...</span>
-                </button>
+                <button type="button" class="btn " onclick="location.href='/nosotros.html';">Conocé Más...</button>
             </div>  
         </div>
 
-        <div class="linea-divisoria"></div>
+        <div class="linea-divisoria row mb-4"></div>
 
-        <div class="row meta">
-            <div class="column">
-                <h2><strong>Nuestras Metas</strong></h2>
+        <div class="row meta mb-4">
+            <div class="col-8">
                 <h5>
                     En Pastas "El Rincón del Sorrentino", nuestra principal meta es ser reconocidos como la fábrica de pastas líder en calidad y sabor en toda la región. Nos esforzamos por mantener la tradición y autenticidad de nuestras recetas italianas, mientras innovamos constantemente para ofrecer productos frescos y variados que satisfagan los paladares de nuestros clientes. Aspiramos a expandir nuestra presencia en el mercado, llegando a más hogares y restaurantes, siempre con un compromiso firme con la excelencia y la satisfacción del cliente.
                 </h5>
 
             </div>
-            <div class="column">
-                <img src="img/metas1.avif" alt="Imagen 1">
+            <div class=" text-center col-4">
+                <h1 class="move">METAS</h1>
             </div>
         </div>
 
-        <div class="linea-divisoria"></div>
+        <div class="linea-divisoria row mb-4"></div>
 
         <div class="row objetivo">
-            <div class="column">
-                <img src="img/objetivos1.png" alt="Imagen 1">
+            <div class="text-center col-4">
+                <h1 class="move">OBJETIVOS</h1>
             </div>
-            <div class="column">
-                <h2><strong>Nuestros Objetivos</strong></h2>
+            <div class="col-8">
                 <h5>
                     Nos enfocamos en mantener la calidad de nuestras pastas artesanales, innovar con nuevos productos y expandir nuestra presencia en el mercado. Implementamos prácticas sostenibles y fortalecemos nuestras relaciones con proveedores para asegurar ingredientes frescos y de alta calidad. Además, nos comprometemos a brindar una excelente experiencia al cliente y a motivar a nuestro equipo, asegurando así que cada bocado de nuestras pastas sea una experiencia única y deliciosa.
                 </h5>
