--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -17,9 +17,28 @@
 <body>
     <div class="container-fluid px-0">
         <!-- Navbar de Octavio -->
-        <header class="row mx-0 header">
-            <h2>Contenido Octavio</h2>
-        </header>
+        <header class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: var(--color-four);">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/pastalogo.png" alt="Logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="promos.html">Promos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-user-plus"></i> Crear Cuenta</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i> Iniciar Sesión</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> 0 - $0,00</a></li>
+                    </ul>
+                </div>
+            </header>
 
         <!-- Principal Nico -->
         <main class="row mx-0 main">
@@ -217,8 +236,38 @@
         </div>
 
         <!-- Footer de Octavio -->
-        <footer class="row mx-0 footer">
-            <h2>Contenido Octavio</h2>
+        <footer class="bg-dark text-light py-4">
+            <div class="container">
+            <div class="row mb-4">
+                <div class="col-md-2 text-center text-md-start mb-3 mb-md-0">
+                <img src="img/pastalogo.png" alt="El Rincon del Sorrentino" class="img-fluid" style="max-width: 100px;">
+                </div>
+                <div class="col-md-2 mb-3 mb-md-0">
+                <h3 class="text-warning">Pastas Artesanales</h3>
+                <p>Calidad y prestigio desde 1943.<br>Gracias por su visita</p>
+                </div>
+                <div class="col-md-3 mb-3 mb-md-0">
+                <h3 class="text-warning">Redes Sociales</h3>
+                <p>
+                    <a href="https://www.instagram.com" target="_blank" class="text-light me-2"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com" target="_blank" class="text-light me-2"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.twitter.com" target="_blank" class="text-light me-2"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.youtube.com" target="_blank" class="text-light"><i class="fab fa-youtube"></i></a>
+                </p>
+                </div>
+                <div class="col-md-2 mb-3 mb-md-0">
+                <h3 class="text-warning">Visítanos</h3>
+                <p>Av. Alberdi 1051<br>Río Cuarto / Córdoba / Argentina</p>
+                </div>
+                <div class="col-md-3">
+                <h3 class="text-warning">Comunícate</h3>
+                <p>(0358) 4249046<br>info@elrincondelsorrentino.com.ar</p>
+                </div>
+            </div>
+            <div class="border-top border-light pt-3 text-center">
+                <p class="mb-0">© 2024 - El Rincón del Sorrentino</p>
+            </div>
+            </div>
         </footer>
     </div>
 
