--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -15,29 +15,50 @@
 </head>
 <body>
     <div class="container-fluid px-0">
-        <!-- Navbar de Octavio -->
-        <header class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: var(--color-four);">
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/pastalogo.png" alt="Logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="promos.html">Promos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-user-plus"></i> Crear Cuenta</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-sign-in-alt"></i> Iniciar Sesión</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> 0 - $0,00</a></li>
-                    </ul>
+        <!-- Navbar de Octavio -->  
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+            <a class="navbar-brand">
+                <img src="img/pastalogo.png" alt="Logo" style="width: 50px; height: auto; margin-right: 0px; margin-left: 25px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="promos.html">Promos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+                <div class="navbar-nav ml-auto">
+                    <div class="nav-item">
+                        <i class="fas fa-user-plus"></i>
+                        <a class="nav-link" href="#">Crear Cuenta</a>
+                    </div>
+                    <div class="nav-item">
+                        <i class="fas fa-sign-in-alt"></i>
+                        <a class="nav-link" href="#">Iniciar Sesión</a>
+                    </div>
+                    <div class="nav-item">
+                        <i class="fas fa-shopping-cart"></i>
+                        <a class="nav-link" href="#">0 - $0,00</a>
+                    </div>
                 </div>
-            </header>
+            </div>
+        </nav>
+    </header>
 
         <!-- Principal Nico -->
         <main class="row mx-0 main">
@@ -229,7 +250,7 @@
         </div>
 
         <!-- Footer de Octavio -->
-        <footer class="bg-dark text-light py-4">
+        <footer class=" text-light py-4">
             <div class="container">
             <div class="row mb-4">
                 <div class="col-md-2 text-center text-md-start mb-3 mb-md-0">
@@ -269,5 +290,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
+
 </body>
 </html>
