--- a/boostrap/promos.html
+++ b/boostrap/promos.html
@@ -40,7 +40,7 @@
             <h2 class="mb-4">Promociones</h2>
             <div class="row mx-5">
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="custom-shadow card h-100">
                         <img src="img/productos/fideo_salsa.jpg" class="card-img-top" alt="Promo 1">
                         <div class="card-body text-center">
                             <h3>Fideos + Salsa a eleccion</h3>
@@ -91,6 +91,7 @@
                             <h3>Sorrentinos + Fideos</h3>
                             <p>1/2 kg. de cada uno</p>
                             <p>Rinde 6 porciones</p>
+                            <h2><b>$ 1300</b></h2>
                             <div class="d-flex justify-content-between align-items-center">
                                 <button class="btn btn-primary btn-block">Agregar al carrito</button>
                                 <input type="number" min="1" value="1" class="form-control w-25">
@@ -105,6 +106,7 @@
                             <h3>Completa tu heladera</h3>
                             <p>Ravioles + Sorrentinos + Fideos</p>
                             <p>Rinde 6 porciones</p>
+                            <h2><b>$ 1300</b></h2>
                             <div class="d-flex justify-content-between align-items-center">
                                 <button class="btn btn-primary btn-block">Agregar al carrito</button>
                                 <input type="number" min="1" value="1" class="form-control w-25">
@@ -119,6 +121,7 @@
                             <h3>2 salsas a eleccion</h3>
                             <p>200gr de cada una</p>
                             <p>Bolognesa / Champiñones / Pesto / Tomate / Verdeo</p>
+                            <h2><b>$ 1300</b></h2>
                             <div class="d-flex justify-content-between align-items-center">
                                 <button class="btn btn-primary btn-block">Agregar al carrito</button>
                                 <input type="number" min="1" value="1" class="form-control w-25">
