--- a/boostrap/promos.html
+++ b/boostrap/promos.html
@@ -18,8 +18,48 @@
 <body>
     <div class="container-fluid px-0">
         <!-- Navbar de Octavio -->
-        <header class="row mx-0 header">
-            <h2>Contenido Octavio</h2>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+                <a class="navbar-brand">
+                    <img src="img/pastalogo.png" alt="Logo" style="width: 50px; height: auto; margin-right: 0px; margin-left: 25px;">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="productos.html">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="promos.html">Promos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                    <div class="navbar-nav ml-auto">
+                        <div class="nav-item">
+                            <i class="fas fa-user-plus"></i>
+                            <a class="nav-link" href="#">Crear Cuenta</a>
+                        </div>
+                        <div class="nav-item">
+                            <i class="fas fa-sign-in-alt"></i>
+                            <a class="nav-link" href="#">Iniciar Sesión</a>
+                        </div>
+                        <div class="nav-item">
+                            <i class="fas fa-shopping-cart"></i>
+                            <a class="nav-link" href="#">0 - $0,00</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </header>
 
         <!-- Principal Nico -->
@@ -88,9 +128,9 @@
                     <div class="card h-100">
                         <img src="img/productos/sorrentinos_fideos.jpg" class="card-img-top" alt="Promo 4">
                         <div class="card-body text-center">
-                            <h3>Sorrentinos + Fideos</h3>
-                            <p>1/2 kg. de cada uno</p>
-                            <p>Rinde 6 porciones</p>
+                            <h3>Sorrentinos + Fideos Frescos</h3>
+                            <p>1/2 kg. de cada tipo de pasta</p>
+                            <p>Rinde 6 porciones. Sorrentinos a eleccion</p>
                             <h2><b>$ 1300</b></h2>
                             <div class="d-flex justify-content-between align-items-center">
                                 <button class="btn btn-primary btn-block">Agregar al carrito</button>
@@ -132,14 +172,40 @@
             </div>
         </div>
         
-        <!-- Nosotros Rodo -->
-        <div class="row mx-0 nosotros">
-            <h2>Contenido Rodo</h2>
-        </div>
 
         <!-- Footer de Octavio -->
-        <footer class="row mx-0 footer">
-            <h2>Contenido Octavio</h2>
+        <footer class=" text-light py-4">
+            <div class="container">
+            <div class="row mb-4">
+                <div class="col-md-2 text-center text-md-start mb-3 mb-md-0">
+                <img src="img/pastalogo.png" alt="El Rincon del Sorrentino" class="img-fluid" style="max-width: 100px;">
+                </div>
+                <div class="col-md-2 mb-3 mb-md-0">
+                <h3 class="text-warning">Pastas Artesanales</h3>
+                <p>Calidad y prestigio desde 1943.<br>Gracias por su visita</p>
+                </div>
+                <div class="col-md-3 mb-3 mb-md-0">
+                <h3 class="text-warning">Redes Sociales</h3>
+                <p>
+                    <a href="https://www.instagram.com" target="_blank" class="text-light me-2"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com" target="_blank" class="text-light me-2"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.twitter.com" target="_blank" class="text-light me-2"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.youtube.com" target="_blank" class="text-light"><i class="fab fa-youtube"></i></a>
+                </p>
+                </div>
+                <div class="col-md-2 mb-3 mb-md-0">
+                <h3 class="text-warning">Visítanos</h3>
+                <p>Av. Alberdi 1051<br>Río Cuarto / Córdoba / Argentina</p>
+                </div>
+                <div class="col-md-3">
+                <h3 class="text-warning">Comunícate</h3>
+                <p>(0358) 4249046<br>info@elrincondelsorrentino.com.ar</p>
+                </div>
+            </div>
+            <div class="border-top border-light pt-3 text-center">
+                <p class="mb-0">© 2024 - El Rincón del Sorrentino</p>
+            </div>
+            </div>
         </footer>
     </div>
 
