--- a/promos.html
+++ b/promos.html
@@ -103,9 +103,9 @@
                         </div>
                         <div class="column">
                             <img src="img/productos/sorrentinos_fideos.jpg" alt="Promo 4">
-                            <h3>Sorrentinos + Fideos</h3>
-                            <p>1/2 kg. de cada uno</p>
-                            <p>Rinde 6 porciones</p>
+                            <h3>Sorrentinos + Fideos Frescos</h3>
+                            <p>1/2 kg. de cada tipo de pasta</p>
+                            <p>Rinde 6 porciones. Sorrentinos a eleccion</p>
                             <h2><b>$ 1300</b></h2>
                             <div class="contenedor-botones">
                                 <button class="boton">Comprar</button>
