--- a/boostrap/productos.html
+++ b/boostrap/productos.html
@@ -77,7 +77,7 @@
             <h3 class="mb-4">Productos</h3>
             <div class="row mx-5">
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/fideos.jpg" class="card-img-top" alt="Fideos">
                         <div class="card-body text-center">
                             <h5 class="card-title">Fideos</h5>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/noquis.jpg" class="card-img-top" alt="Ñoquis">
                         <div class="card-body text-center">
                             <h5 class="card-title">Ñoquis</h5>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/ravioles.jpg" class="card-img-top" alt="Ravioles">
                         <div class="card-body text-center">
                             <h5 class="card-title">Ravioles</h5>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/capelleti.jpg" class="card-img-top" alt="Ravioles">
                         <div class="card-body text-center">
                             <h5 class="card-title">Capellettis</h5>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/pansotis.jpg" class="card-img-top" alt="Ravioles">
                         <div class="card-body text-center">
                             <h5 class="card-title">Pansotis</h5>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/sorrentinos.jpg" class="card-img-top" alt="Ravioles">
                         <div class="card-body text-center">
                             <h5 class="card-title">Sorrentinos</h5>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/bolognesa.jpg" class="card-img-top" alt="Ravioles">
                         <div class="card-body text-center">
                             <h5 class="card-title">Salsa Bolognesa</h5>
@@ -175,7 +175,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/campi.jpg" class="card-img-top" alt="Ravioles">
                         <div class="card-body text-center">
                             <h5 class="card-title">Salsa Champioñones</h5>
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/pesto.jpg" class="card-img-top" alt="Ravioles">
                         <div class="card-body text-center">
                             <h5 class="card-title">Salsa Pesto</h5>
@@ -203,7 +203,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/tomate.jpg" class="card-img-top" alt="Ravioles">
                         <div class="card-body text-center">
                             <h5 class="card-title">Salsa Tomate</h5>
@@ -217,7 +217,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
-                    <div class="card h-100">
+                    <div class="card h-100 border">
                         <img src="img/productos/verdeo.jpg" class="card-img-top" alt="Ravioles">
                         <div class="card-body text-center">
                             <h5 class="card-title">Salsa Verdeo</h5>
