agrego carpeta js

--- a/miligram/nosotros.html
+++ b/miligram/nosotros.html
@@ -142,8 +142,8 @@
             </div>
         </footer>
     </div>
-    <script src="script_nosotros.js"></script>
-    <script src="script.js"></script>
+    <script src="js/script_nosotros.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
