--- a/miligram/contacto.html
+++ b/miligram/contacto.html
@@ -127,7 +127,7 @@
             </div>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     
 </body>
 </html>
