--- a/miligram/index.html
+++ b/miligram/index.html
@@ -286,6 +286,6 @@
             </div>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
