--- a/miligram/productos.html
+++ b/miligram/productos.html
@@ -256,7 +256,7 @@
             </div>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
