--- a/boostrap/nosotros.html
+++ b/boostrap/nosotros.html
@@ -90,13 +90,11 @@
                 </div>
                 <div class="carousel-item">
                     <div class="row">
-                        <div class="col-md-8 content">
+                        <div class="content">
                             <h3>Nuestra Historia</h3>
                             <p>Nuestra historia comienza en 1970, cuando Giovanni Rossi decidió compartir su amor por la cocina italiana con el mundo. Inspirado por las recetas familiares y técnicas tradicionales, Giovanni debió emigrar de su país, y encontró un hermoso lugar en la ciudad de Río Cuarto. Aquí es donde decidió iniciar su proyecto de vida, entonces fundó El Rincón del Sorrentino. Desde entonces, hemos mantenido viva su visión, combinando métodos artesanales con ingredientes de primera calidad para crear pastas que deleitan a nuestros clientes.</p>
                         </div>
-                        <div class="col-md-4">
-                            <img src="img/vintage_pastas.png" alt="Nuestra Historia">
-                        </div>
+                        
                     </div>
                 </div>
                 <div class="carousel-item">
