mod generales de octavio

--- a/miligram/index.html
+++ b/miligram/index.html
@@ -59,11 +59,11 @@
                             <p id="total-carrito">Total: $0,00</p>
                             <button id="finalizar-compra" class="boton-finalizar">Finalizar Compra</button>
                         </div>
-                        
                     </div>
                 </nav>
             </div>
         </header>
+        <!-- Principal Nico -->
         <main class="row principal">
             <section class="overlay">
                 <h1>El Rincón del Sorrentino</h1>
@@ -285,7 +285,7 @@
                 <p>© 2024 - El Rincón del Sorrentino</p>
             </div>
         </footer>
-    </div>
+</div>
     <script src="js/script.js"></script>
 </body>
 </html>
