--- a/miligram/promos.html
+++ b/miligram/promos.html
@@ -39,15 +39,23 @@
                 <nav class="navbar-titulo">
                     <div class="nav-item">
                         <i class="fas fa-user-plus"></i>
-                        <a href="#">Crear Cuenta</a>
+                        <a href="crear_cuenta.html">Crear Cuenta</a>
                     </div>
-                    <div class="nav-item">
-                        <i class="fas fa-sign-in-alt"></i>
-                        <a href="#">Iniciar Sesión</a>
+                    <div class="nav-item" id="login-section">
+                        <i class="fas fa-sign-in-alt" id="login-icon"></i>
+                        <a href="inicio_sesion.html" id="login-link">Iniciar Sesión</a>
+                        <span id="logged-in-user"></span>
                     </div>
-                    <div class="nav-item">
+                    <div class="nav-item" id="carrito-container">
                         <i class="fas fa-shopping-cart"></i>
-                        <a href="#">0 - $0,00</a>
+                        <!-- Ventana desplegable -->
+                        <div id="carrito-desplegable" class="carrito-desplegable" style="display: none;">
+                            <h4>Tu Carrito</h4>
+                            <ul id="carrito-lista"></ul>
+                            <p id="total-carrito">Total: $0,00</p>
+                            <button id="finalizar-compra" class="boton-finalizar">Finalizar Compra</button>
+                        </div>
+                        
                     </div>
                 </nav>
             </div>
