--- a/miligram/index.html
+++ b/miligram/index.html
@@ -18,10 +18,10 @@
     
 </head>
 <body>
-    <div class="contenedora">
+    <div class="container">
         <!-- navbar de octavio -->
         <header class="row navbar">
-            <div class="column column-60">
+            <div class="column">
                 <nav class="navbar">
                     <div class="logo">
                         <img src="img/pastalogo.png" alt="Logo">
@@ -64,7 +64,7 @@
                 </nav>
             </div>
         </header>
-        <main class="row principal">
+        <main class="row principal column">
             <section class="overlay">
                 <h1>El Rincón del Sorrentino</h1>
                 <h3>PASTAS ARTESANALES</h3>
@@ -190,31 +190,32 @@
         <div class="linea-divisoria"></div>
 
         <div class="row nosotros">
-            <div class="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item">
-                        <img src="img/nosotros7.jpg" alt="Imagen 1">
+            <div class="column">
+                <div class="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img src="img/nosotros7.jpg" alt="Imagen 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/nosotros3.jpg" alt="Imagen 3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/nosotros4.jpg" alt="Imagen 3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/nosotros5.jpg" alt="Imagen 3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/nosotros6.jpg" alt="Imagen 3">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/nosotros3.jpg" alt="Imagen 3">
+                    <div class="carousel-controls">
+                        <button class="prev">&#10094;</button>
+                        <button class="next">&#10095;</button>
                     </div>
-                    <div class="carousel-item">
-                        <img src="img/nosotros4.jpg" alt="Imagen 3">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/nosotros5.jpg" alt="Imagen 3">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/nosotros6.jpg" alt="Imagen 3">
-                    </div>
-                </div>
-                <div class="carousel-controls">
-                    <button class="prev">&#10094;</button>
-                    <button class="next">&#10095;</button>
-                </div>
-                            
+                </div>                
             </div>
-            <div class="nosotros-texto">
+            <div class="nosotros-texto column ">
                 <h2>Sobre Nosotros</h2>
                 <h5>
                     El Rincón del Sorrentino, una empresa familiar con más de 50 años de tradición en la elaboración de las mejores pastas artesanales. Fundada en 1970 por Giovanni Rossi, un apasionado chef italiano, nuestra fábrica comenzó como un pequeño taller en el corazón de la ciudad, con el sueño de traer los auténticos sabores de Italia a nuestras mesas locales.
