--- a/miligram/nosotros.html
+++ b/miligram/nosotros.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/nosotros.css">
+    <link rel="stylesheet" href="css/rodo_nosotros.css">
     <link rel="stylesheet" href="css/nico.css">
     <link rel="stylesheet" href="css/victorio.css">
 </head>
