--- a/boostrap/nosotros.html
+++ b/boostrap/nosotros.html
@@ -8,7 +8,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="css/estilo.css">
-    <link rel="stylesheet" href="css/nosotros.css">
+    <link rel="stylesheet" href="css/rodo_nosotros.css">
     <link rel="stylesheet" href="css/nico.css">
     <link rel="stylesheet" href="css/jona.css">
     <link rel="stylesheet" href="css/victorio.css">
