aplicando container y reemplaza contenedora

--- a/miligram/contacto.html
+++ b/miligram/contacto.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/octa_contacto.css">
 </head>
 <body>
-    <div class="contenedora">
+    <div class="container">
         <!-- Navbar de Octavio -->
         <header class="row navbar">
             <div class="column column-60">
