--- a/miligram/productos.html
+++ b/miligram/productos.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <div class="contenedora">
+    <div class="container">
         <!-- navbar de octavio -->
         <header class="row navbar">
             <div class="column column-60">
