--- a/miligram/promos.html
+++ b/miligram/promos.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/nico_promos.css">
 </head>
 <body>
-    <div class="contenedora">
+    <div class="container">
         <header class="row navbar">
             <div class="column column-60">
                 <nav class="navbar">
