color change index.html, productos.html

--- a/boostrap/productos.html
+++ b/boostrap/productos.html
@@ -77,8 +77,8 @@
         </main>
 
         <!-- Productos de Joni -->
-        <div class="container-fluid mt-5 ">
-            <h3 class="mb-4">Productos</h3>
+        <div class="container-fluid mt-5 p-5">
+            <h2 class="mb-4 text-center">Pastas Caseras / Salsas</h2>
             <div class="row mx-5">
                 <div class="col-lg-4 col-md-6 mb-4 tarjeta">
                     <div class="card h-100 border">
