--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -78,7 +78,7 @@
 
         <!-- Productos de Joni -->
 
-        <div class="container-fluid mt-5">
+        <div class="container-fluid mt-2 p-4">
             <h3 class="mb-4">Productos Destacados</h3>
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 tarjeta">
@@ -134,7 +134,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid mt-5">
+        <div class="container-fluid mt-2 p-4">
             <h3 class="mb-4">Combos</h3>
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 tarjeta-promos">
