--- a/miligram/nosotros.html
+++ b/miligram/nosotros.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/victorio.css">
 </head>
 <body>
-    <div class="contenedora">
+    <div class="container">
         <!-- navbar de octavio -->
         <header class="row navbar">
             <div class="column column-60">
