--- a/boostrap/index.html
+++ b/boostrap/index.html
@@ -194,13 +194,13 @@
             </div>
         </div>
 
-        <div class="linea-divisoria mb-4"></div>
+        <div class="linea-divisoria "></div>
 
         <!-- Nosotros Rodo -->
         <div class="container-fluid px-0">
             <div class="row p-4">
                 <!-- Carousel -->
-                <div id="carouselExampleSlidesOnly" class="carousel slide col-12 col-md-6" data-bs-ride="carousel">
+                <div id="carouselExampleSlidesOnly" class="carousel slide col-12 mb-4 col-md-6" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="2000">
                             <img src="img/nosotros7.jpg" class="d-block w-100 rounded" alt="Imagen 1">
@@ -221,7 +221,7 @@
                 </div>
         
                 <!-- Texto sobre Nosotros -->
-                <div class="col-12 col-md-6 mb-4">
+                <div class="col-12 col-md-6 ">
                     <h2>Sobre Nosotros</h2>
                     <p>
                         El Rincón del Sorrentino, una empresa familiar con más de 50 años de tradición en la elaboración de las mejores pastas artesanales. Fundada en 1970 por Giovanni Rossi, un apasionado chef italiano, nuestra fábrica comenzó como un pequeño taller en el corazón de la ciudad, con el sueño de traer los auténticos sabores de Italia a nuestras mesas locales.
@@ -246,7 +246,7 @@
                         En Pastas "El Rincón del Sorrentino", nuestra principal meta es ser reconocidos como la fábrica de pastas líder en calidad y sabor en toda la región. Nos esforzamos por mantener la tradición y autenticidad de nuestras recetas italianas, mientras innovamos constantemente para ofrecer productos frescos y variados que satisfagan los paladares de nuestros clientes. Aspiramos a expandir nuestra presencia en el mercado, llegando a más hogares y restaurantes, siempre con un compromiso firme con la excelencia y la satisfacción del cliente.
                     </p>
                 </div>
-                <div class="col-12 col-md-4 ">
+                <div class="col-12 mb-4 col-md-4 ">
                     <h1 class="move text-center d-flex align-items-center justify-content-center">METAS</h1>
                 </div>
             </div>
@@ -256,7 +256,7 @@
 
             <!-- Objetivos -->
             <div class="row p-4">
-                <div class="col-12 col-md-4 text-center">
+                <div class="col-12 mb-4 col-md-4 text-center">
                     <h1 class="move position-relative d-flex justify-content-center align-items-center text-center">OBJETIVOS</h1>
                 </div>
                 <div class="col-12 col-md-8">
